<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login">


    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblCorreo"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblPass"
        android:inputType="textPassword"
        android:layout_above="@+id/btnLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblOlvidado"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/textColorHintInverse"
        android:text="@string/lblBoton"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblOlvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblOlvido"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_above="@+id/lblNuevoUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp" />

    <TextView
        android:id="@+id/lblNuevoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lblOlvidado"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/lblAlta"
        android:textAlignment="center"
        android:textColor="#000000" />

</RelativeLayout>
