<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lblTxtoDescript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:text="@string/lblTextoVario1"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblTxtoDescript2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblTxtoDescript"
        android:text="@string/lblTextoVario2"
        android:textColor="#000000"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/txtCorreoOlvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblCorreo"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/btnPassReset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnPassReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#428bca"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnReset"
        android:layout_marginBottom="198dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>